# Notifications_API

./: db.sqlite3  pyproject.toml
notifications_api/: apps.py  models.py  serialisers.py  tasks.py  urls.py  views.py
notifications_api/migrations/: 0001_initial.py  0002_rename_message_distribution_message_text.py  0003_alter_client_tag.py  0004_alter_client_id_alter_client_utc_and_more.py  0005_alter_client_id_alter_distribution_id_and_more.py  0006_rename_client_id_message_client_and_more.py  0007_alter_message_client_alter_message_distribution.py
root/: celery.py  settings.py  urls.py
